Добавлена картинка Паста Карбонара

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="menu-item">
-        <img src="https://via.placeholder.com/250x150" alt="Блюдо 3">
+        <img src="https://twominname.github.io/telegram-order-app/images/carbonara.jpg" alt="Блюдо 3">
         <p>Блюдо 3 - 200 ₽</p>
         <button class="button" onclick="addToOrder('Блюдо 3', 200)">Добавить в заказ</button>
     </div>
