--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,20 +32,30 @@
 <body>
     <h1>Выберите категорию</h1>
     <div>
-        <button class="category-button" onclick="goToCategory('pizza')">Пиццы</button>
-        <button class="category-button" onclick="goToCategory('pasta')">Пасты</button>
-        <button class="category-button" onclick="goToCategory('salads')">Салаты</button>
-        <button class="category-button" onclick="goToCategory('soups')">Супы</button>
-        <button class="category-button" onclick="goToCategory('sushi')">Суши</button>
-        <button class="category-button" onclick="goToCategory('fastfood')">Фастфуд</button>
-        <button class="category-button" onclick="goToCategory('desserts')">Десерты</button>
-        <button class="category-button" onclick="goToCategory('drinks')">Напитки</button>
+        <a href="pizza.html">
+            <button class="category-button">Пицца</button>
+        </a>
+        <a href="pasta.html">
+            <button class="category-button">Паста</button>
+        </a>
+        <a href="salads.html">
+            <button class="category-button">Салаты</button>
+        </a>
+        <a href="soups.html">
+            <button class="category-button">Супы</button>
+        </a>
+        <a href="sushi.html">
+            <button class="category-button">Суши</button>
+        </a>
+        <a href="fastfood.html">
+            <button class="category-button">Фастфуд</button>
+        </a>
+        <a href="desserts.html">
+            <button class="category-button">Десерты</button>
+        </a>
+        <a href="drinks.html">
+            <button class="category-button">Напитки</button>
+        </a>
     </div>
-
-    <script>
-        function goToCategory(category) {
-            window.location.href = `${category}.html`;
-        }
-    </script>
 </body>
 </html>
