--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background-image: url('https://github.com/Twominname/telegram-order-app/raw/302a5f7d6881485f635b216e94e4a0caf88cbbe0/fon.pdf'); /* Замените на ваше изображение */
+            background-image: url('https://raw.githubusercontent.com/Twominname/telegram-order-app/master/images/fon.jpg'); /* Указание правильного пути */
             background-size: cover; /* Сделает фон растянутым на весь экран */
             background-position: center; /* Центрируем фон */
             background-repeat: no-repeat; /* Чтобы фон не повторялся */
@@ -51,14 +51,6 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
 
-        /* Добавляем фоновое изображение */
-        body {
-            background-image: url('https://example.com/your-image.jpg'); /* Замените на ваше изображение */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-        
         /* Добавляем немного стиля для ссылки */
         a {
             text-decoration: none;
