Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background-image: url('https://raw.githubusercontent.com/Twominname/telegram-order-app/master/images/fon.jpg'); /* Указание правильного пути */
+            background-image: url('https://github.com/Twominname/telegram-order-app/blob/master/images/fon.jpg?raw=true'); /* Указание правильного пути */
             background-size: cover; /* Сделает фон растянутым на весь экран */
             background-position: center; /* Центрируем фон */
             background-repeat: no-repeat; /* Чтобы фон не повторялся */
