--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
     </style>
 </head>
 <body>
-    <h1>Выберите категорию</h1>
+    <h1>Menu</h1>
     <div class="categories">
         <!-- Кнопка с анимацией для Пиццы -->
         <a href="pizza.html">
             <button class="category-button">
                 <div class="animation-container" id="pizza-animation"></div> <!-- Контейнер для анимации -->
-                Пицца
+                Pizza
             </button>
         </a>
-        <a href="pasta.html"><button class="category-button">Паста</button></a>
-        <a href="salads.html"><button class="category-button">Салаты</button></a>
-        <a href="soups.html"><button class="category-button">Супы</button></a>
-        <a href="sushi.html"><button class="category-button">Суши</button></a>
-        <a href="fastfood.html"><button class="category-button">Фастфуд</button></a>
-        <a href="desserts.html"><button class="category-button">Десерты</button></a>
-        <a href="drinks.html"><button class="category-button">Напитки</button></a>
+        <a href="pasta.html"><button class="category-button">Pasta</button></a>
+        <a href="salads.html"><button class="category-button">Calad</button></a>
+        <a href="soups.html"><button class="category-button">Soup</button></a>
+        <a href="sushi.html"><button class="category-button">Sushi</button></a>
+        <a href="fastfood.html"><button class="category-button">FastFood</button></a>
+        <a href="desserts.html"><button class="category-button">Desert</button></a>
+        <a href="drinks.html"><button class="category-button">Drink</button></a>
     </div>
 
     <script>
