Изменены названия категорий

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 background-repeat: no-repeat;
                 min-height: 100vh;
                 display: flex;
-                flex-direction: column;
-                justify-content: space-between;
+                justify-content: center; /* Центрируем все элементы по вертикали */
+                align-items: center; /* Центрируем по горизонтали */
             }
     
             h1 {
